Support client-selected execution images (#142)
